# stringbean

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTRUCTIONS.md  MANIFEST.in  README.md  RELEASE.md  SECURITY.md  implemented.txt  pyproject.toml
.agent-relay/: cli-capabilities.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
.stringbean/: cli-capabilities.json  config.yaml
codex-prompts/: sbx.md
docs/: hosting.md  x_post.md
plugins/claude-stringbean/.claude-plugin/: plugin.json
plugins/claude-stringbean/scripts/: sbx-claude
plugins/claude-stringbean/skills/sbx/: SKILL.md
plugins/grok-stringbean/.grok-plugin/: plugin.json
plugins/grok-stringbean/scripts/: sbx-grok
plugins/grok-stringbean/skills/sbx/: SKILL.md
plugins/stringbean/: .mcp.json
plugins/stringbean/.codex-plugin/: plugin.json
plugins/stringbean/mcp/: server.py
plugins/stringbean/runtime/: README.md  pyproject.toml
plugins/stringbean/runtime/scripts/: sbx
plugins/stringbean/runtime/src/agent_relay/: __init__.py  cli.py  context.py  exclusions.py  models.py  policy.py  runner.py  state.py  utils.py
plugins/stringbean/runtime/src/agent_relay/adapters/: claude.py
plugins/stringbean/runtime/src/agent_relay/connectors/: __init__.py  base.py  grok.py
plugins/stringbean/runtime/src/agent_relay/templates/: advisor-review.md  implementer-fix-request.md  implementer-task.md  orchestrator-planning.md  reviewer-review.md
plugins/stringbean/scripts/: sbx-codex
plugins/stringbean/skills/sbx/: SKILL.md
plugins/stringbean/skills/sbx/agents/: openai.yaml
scripts/: install-claude-plugin.sh  install-codex-plugin.sh  install-codex-prompts.sh  install-grok-plugin.sh  install-local-shims.sh  real-provider-smoke.sh  sbx  sbx-zsh-hook.zsh  stringbean
src/agent_relay/: __init__.py  capabilities.py  cli.py  config.py  context.py  exclusions.py  models.py  parser.py  policy.py  runner.py  state.py  streaming.py  templates.py  utils.py  workflow.py
src/agent_relay/adapters/: __init__.py  base.py  claude.py  codex.py  generic.py  grok.py
src/agent_relay/connectors/: claude.py  codex.py  generic.py
src/agent_relay/templates/: final-summary.md  orchestrator-revision.md  reviewer-review.md
tests/: conftest.py  helpers.py  test_cli.py  test_codex_mcp.py  test_config_and_parser.py  test_exclusions.py  test_runner.py  test_state.py  test_utils.py  test_version_consistency.py  test_workflow.py
