[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stringbean"
version = "0.1.0"
description = "Local multi-agent coding orchestrator with provider-agnostic subprocess CLIs"
readme = "README.md"
license = {text = "MIT"}
keywords = ["agent-orchestration", "LLM", "CLI", "coding-assistant", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.7",
  "PyYAML>=6.0"
]

[project.scripts]
stringbean = "agent_relay.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.1"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
agent_relay = ["templates/*.md"]
