[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stringbean"
version = "0.2.0"
description = "Local multi-agent coding orchestrator with provider-agnostic subprocess CLIs"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Stringbean contributors"}
]
keywords = ["agent-orchestration", "LLM", "CLI", "coding-assistant", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
]
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.7",
  "PyYAML>=6.0"
]

[project.scripts]
stringbean = "agent_relay.cli:main"
sbx = "agent_relay.cli:sbx_main"

[project.optional-dependencies]
dev = [
  "pytest>=8.1"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
agent_relay = ["templates/*.md"]
